--- a/style.css
+++ b/style.css
@@ -1,19 +1,21 @@
-header{
-    padding:30px;
-}
-main{
-    width:calc(75% - 60px);
-    float:left;
-    padding:30px;
-}
-aside{
-    width: calc(25% - 60px);
-    float: left;
-    border-left: none;
-    padding:30px;
-}
+.iframe-container{
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%; 
+    height: 0;
+  }
+  .iframe-container iframe{
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+
 footer{
     clear:both;
     padding:30px;
     text-align: center;
 }
+
+
